# game_of_life

./: CMakeLists.txt  README.md  board.cpp  board.hpp  consts.hpp  fps.cpp  fps.hpp  game.cpp  game.hpp  main.cpp
